<resources>
    <string name="app_name">FireBaseTest</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="app_title">Journey Tracker</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <string name="tab_text_1">Popular</string>
    <string name="tab_text_2">Following</string>
    <string name="username_hint">Username</string>
    <string name="title_activity_profile_view">ProfileViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_journy_text">New Journey</string>
    <string name="kudos_string">Kudos</string>
    <string name="follow_button_text">FOLLOW</string>
    <string name="unfollow_button_text">UNFOLLOW</string>
</resources>
